--- a/index.html
+++ b/index.html
@@ -40,8 +40,24 @@
 
 <body class="font-lato">
 
-    <header>
-
+    <header class="lg:max-w-screen-2xl mx-auto bg-tome lg:px-12 lg:py-8 rounded-full">
+        <div class="flex justify-end items-center flex-col">
+            <div class="flex flex-1 items-center justify-start list-none gap-6 text-lg font-medium text-white">
+                <li>Home</li>
+                <li>About Us</li>
+                <li>Shop</li>
+                <li>All Fruits</li>
+            </div>
+            <div class="flex flex-1 items-center justify-center gap-2">
+                <img src="./images/logo.png" alt="">
+                <h1 class="text-4xl font-bold text-white">Fruit Burst</h1>
+            </div>   
+            <div class="flex flex-1 items-center justify-end">
+                <input class="lg:w-80 px-6 py-3 relative border-none outline-none rounded-full" type="text" placeholder="Search here">
+                <i class="fa-solid fa-magnifying-glass absolute pr-4 text-xl"></i>
+            </div>
+            
+        </div>
     </header>
     <main>
 
