--- a/index.html
+++ b/index.html
@@ -116,127 +116,168 @@
 
 
     <main>
- <!-- slider section start -->
-      
- <div class="carousel relative mx-2 lg:mx-16 mt-5 lg:mt-12">
-  <div id="slide1" class="carousel-item relative w-full">
-    <img src="./images/banner1.png" class="w-full brightness-50" />
-    <div
-      class="absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 top-1/2">
-      <a
-        href="#slide4"
-        class="btn btn-circle bg-transparent text-white border-none"
-        >❮</a
-      >
-          <!-- hero one -->
+ 
+
+  <div class="carousel relative mx-2 lg:mx-16 mt-5 lg:mt-14">
+    <div id="slide1" class="carousel-item relative w-full">
+      <img src="./images/banner1.png" class="w-full brightness-50" />
       <div
+        class="absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 top-1/2">
+        <a
+          href="#slide4"
+          class="btn btn-circle bg-transparent text-white border-none"
+          >❮</a
+        >
+
+        <div
+          class="absolute flex flex-col justify-center items-center top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 gap-3 md:gap-5 lg:gap-8">
+          <h1 class="text-xl lg:text-7xl font-bold text-white text-center">
+            Exotic tastes at your
+            <br> doorstep
+          </h1>
+          <p class="text-xs lg:text-base font-normal text-white text-center">
+            We supply highly quality organic products
+          </p>
+          <div
+            class="btn bg-tomato border-none text-white text-base lg:text-lg font-bold">
+            Shop Now
+          </div>
+        </div>
+
+        <a
+          href="#slide2"
+          class="btn btn-circle bg-transparent text-white border-none"
+          >❯</a
+        >
+      </div>
+    </div>
+    <div id="slide2" class="carousel-item relative w-full">
+      <img src="./images/banner2.png" class="w-full brightness-50" />
+      <div
+        class="absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 top-1/2">
+        <a
+          href="#slide1"
+          class="btn btn-circle bg-transparent text-white border-none"
+          >❮</a
+        >
+
+        <div
         class="absolute flex flex-col justify-center items-center top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 gap-3 md:gap-5 lg:gap-8">
-        <h1 class="text-xl lg:text-7xl font-bold lg:mt-8 text-white text-center">
-          Exotic tastes at your <br>
-          doorstep
+        <h1 class="text-xl lg:text-7xl font-bold text-white text-center">
+          Exotic tastes at your
+          <br> doorstep
         </h1>
-        <p class="text-xs lg:text-base lg:mt-6 font-medium text-white text-center">
+        <p class="text-xs lg:text-base font-normal text-white text-center">
           We supply highly quality organic products
         </p>
-        <button class="btn bg-tomato border-none text-white text-base lg:text-xl font-extrabold">Shop Now</button>
+        <div
+          class="btn bg-tomato border-none text-white text-base lg:text-lg font-bold">
+          Shop Now
+        </div>
       </div>
 
-      <a
-        href="#slide2"
-        class="btn btn-circle bg-transparent text-white border-none"
-        >❯</a
-      >
+        <a
+          href="#slide3"
+          class="btn btn-circle bg-transparent text-white border-none"
+          >❯</a
+        >
+      </div>
     </div>
-  </div>
-  <div id="slide2" class="carousel-item relative w-full">
-    <img src="./images/banner2.png" class="w-full brightness-50" />
-    <div
-      class="absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 top-1/2">
-      <a
-        href="#slide1"
-        class="btn btn-circle bg-transparent text-white border-none"
-        >❮</a
-      >
-      <!-- hero two -->
+    <div id="slide3" class="carousel-item relative w-full">
+      <img src="./images/banner3.png" class="w-full brightness-50" />
       <div
-      class="absolute flex flex-col justify-center items-center top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 gap-3 md:gap-5 lg:gap-8">
-      <h1 class="text-xl lg:text-7xl font-bold lg:mt-8 text-white text-center">
-        Exotic tastes at your <br>
-        doorstep
-      </h1>
-      <p class="text-xs lg:text-base lg:mt-6 font-medium text-white text-center">
-        We supply highly quality organic products
-      </p>
-      <button class="btn bg-tomato border-none text-white text-base lg:text-xl font-extrabold">Shop Now</button>
-    </div>
+        class="absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 top-1/2">
+        <a
+          href="#slide2"
+          class="btn btn-circle bg-transparent text-white border-none"
+          >❮</a
+        >
 
-      <a
-        href="#slide3"
-        class="btn btn-circle bg-transparent text-white border-none"
-        >❯</a
-      >
+        <div
+        class="absolute flex flex-col justify-center items-center top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 gap-3 md:gap-5 lg:gap-8">
+        <h1 class="text-xl lg:text-7xl font-bold text-white text-center">
+          Exotic tastes at your
+          <br> doorstep
+        </h1>
+        <p class="text-xs lg:text-base font-normal text-white text-center">
+          We supply highly quality organic products
+        </p>
+        <div
+          class="btn bg-tomato border-none text-white text-base lg:text-lg font-bold">
+          Shop Now
+        </div>
+      </div>
+        <a
+          href="#slide4"
+          class="btn btn-circle bg-transparent text-white border-none"
+          >❯</a
+        >
+      </div>
     </div>
-  </div>
-  <div id="slide3" class="carousel-item relative w-full">
-    <img src="./images/banner3.png" class="w-full brightness-50" />
-    <div
-      class="absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 top-1/2">
-      <a
-        href="#slide2"
-        class="btn btn-circle bg-transparent text-white border-none"
-        >❮</a
-      >
-    <!-- hero three -->
+    <div id="slide4" class="carousel-item relative w-full">
+      <img src="./images/banner4.png" class="w-full brightness-50" />
       <div
-      class="absolute flex flex-col justify-center items-center top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 gap-3 md:gap-5 lg:gap-8">
-      <h1 class="text-xl lg:text-7xl font-bold lg:mt-8 text-white text-center">
-        Exotic tastes at your <br>
-        doorstep
-      </h1>
-      <p class="text-xs lg:text-base lg:mt-6 font-medium text-white text-center">
-        We supply highly quality organic products
-      </p>
-      <button class="btn bg-tomato border-none text-white text-base lg:text-xl font-extrabold">Shop Now</button>
-    </div>
+        class="absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 top-1/2">
+        <a
+          href="#slide3"
+          class="btn btn-circle bg-transparent text-white border-none"
+          >❮</a
+        >
 
-      <a
-        href="#slide4"
-        class="btn btn-circle bg-transparent text-white border-none"
-        >❯</a
-      >
-    </div>
+        <div
+          class="absolute flex flex-col justify-center items-center top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 gap-3 md:gap-5 lg:gap-8">
+          <h1 class="text-xl lg:text-7xl font-bold text-white text-center">
+            Exotic tastes at your
+            <br> doorstep
+          </h1>
+          <p class="text-xs lg:text-base font-normal text-white text-center">
+            We supply highly quality organic products
+          </p>
+          <div
+            class="btn bg-tomato border-none text-white text-base lg:text-lg font-bold">
+            Shop Now
+          </div>
+        </div>
+        <a
+          href="#slide1"
+          class="btn btn-circle bg-transparent text-white border-none"
+          >❯</a
+        >
+      </div>
+    </div> 
   </div>
-  <div id="slide4" class="carousel-item relative w-full">
-    <img src="./images/banner4.png" class="w-full brightness-50" />
+   <!-- slider end -->
+  <!-- fruits list start -->
+  <div
+    class="hidden lg:block relative mx-60 my-24 text-center text-black bg-white z-1">
     <div
-      class="absolute flex justify-between items-center transform -translate-y-1/2 left-5 right-5 top-1/2">
-      <a
-        href="#slide3"
-        class="btn btn-circle bg-transparent text-white border-none"
-        >❮</a
-      >
-      <!-- hero four -->
-      <div
-      class="absolute flex flex-col justify-center items-center top-1/2 left-1/2 -translate-x-1/2 -translate-y-1/2 gap-3 md:gap-5 lg:gap-8">
-      <h1 class="text-xl lg:text-7xl font-bold lg:mt-8 text-white text-center">
-        Exotic tastes at your <br>
-        doorstep
-      </h1>
-      <p class="text-xs lg:text-base lg:mt-6 font-medium text-white text-center">
-        We supply highly quality organic products
-      </p>
-      <button class="btn bg-tomato border-none text-white text-base lg:text-xl font-extrabold">Shop Now</button>
-    </div>
+      class="absolute flex flex-row gap-40 justify-center bg-white shadow-md items-center -bottom-1 rounded-xl px-10 py-5">
+      <div>
+        <img src="./images/fruit1.png" alt="" />
+        <p class="mt-4">Strawberry</p>
+      </div>
 
-      <a
-        href="#slide1"
-        class="btn btn-circle bg-transparent text-white border-none"
-        >❯</a
-      >
+      <div>
+        <img src="./images/fruit2.png" alt="" />
+        <p class="mt-4">Orange</p>
+      </div>
+      <div>
+        <img src="./images/fruit3.png" alt="" />
+        <p class="mt-4">Mango</p>
+      </div>
+      <div>
+        <img src="./images/fruit4.png" alt="" />
+        <p class="mt-4">Strawberry</p>
+      </div>
+      <div>
+        <img src="./images/fruit5.png" alt="" />
+        <p class="mt-4">Mango</p>
+      </div>
     </div>
   </div>
+  <!-- fruits list end -->
   
-  <!-- slider end -->
+
 
     </main>
 
