--- a/index.html
+++ b/index.html
@@ -915,6 +915,85 @@ class="grid grid-flow-row md:grid-cols-2 lg:grid-cols-4 gap-10 mx-3 my-10 lg:mx-
 
 <!-- price section end -->
 
+ <!-- Team Section -->
+ <div class="mx-3 lg:mx-16">
+  <div
+    class="hero bg-cover bg-center bg-no-repeat"
+    style="background-image: url(./images/team.png)">
+    <div class="hero-overlay bg-opacity-60"></div>
+    <div class="flex flex-col text-center text-white p-12">
+      <div class="">
+        <h1 class="mb-5 text-4xl lg:text-7xl font-extrabold">Meet the team</h1>
+        <p class="mb-5 text-base font-normal">
+          Contrary to popular belief, is not simply random text. It has
+          roots in a piece of classical Latin literature from 45 BC, making
+          it over 2000 years old.
+        </p>
+      </div>
+
+      <div
+        class="grid grid-flow-row md:grid-cols-2 lg:grid-cols-4 gap-4 mt-12">
+        <div class="h-full flex flex-col items-center text-center">
+          <img
+            alt="team"
+            class="object-cover object-center mb-4"
+            src="./images/member1.png" />
+          <div class="w-full">
+            <h2 class="text-3xl font-bold">Awlad Hossain</h2>
+            <h3 class="mb-3 text-base font-medium">Fruits Expert</h3>
+            <i class="fab fa-facebook text-tomato text-3xl mr-2"></i>
+            <i class="fab fa-twitter text-tomato text-3xl mr-2"></i>
+            <i class="fab fa-linkedin text-tomato text-3xl"></i>
+          </div>
+        </div>
+
+        <div class="h-full flex flex-col items-center text-center">
+          <img
+            alt="team"
+            class="object-cover object-center mb-4"
+            src="./images/member4.png" />
+          <div class="w-full">
+            <h2 class="text-3xl font-bold">Chaity</h2>
+            <h3 class="mb-3 text-base font-medium">Fruits Expert</h3>
+            <i class="fab fa-facebook text-tomato text-3xl mr-2"></i>
+            <i class="fab fa-twitter text-tomato text-3xl mr-2"></i>
+            <i class="fab fa-linkedin text-tomato text-3xl"></i>
+          </div>
+        </div>
+
+        <div class="h-full flex flex-col items-center text-center">
+          <img
+            alt="team"
+            class="object-cover object-center mb-4"
+            src="./images/member2.png" />
+          <div class="w-full">
+            <h2 class="text-3xl font-bold">Safia Chowdhury</h2>
+            <h3 class="mb-3 text-base font-medium">Fruits Expert</h3>
+            <i class="fab fa-facebook text-tomato text-3xl mr-2"></i>
+            <i class="fab fa-twitter text-tomato text-3xl mr-2"></i>
+            <i class="fab fa-linkedin text-tomato text-3xl mr-2"></i>
+          </div>
+        </div>
+
+        <div class="h-full flex flex-col items-center text-center">
+          <img
+            alt="team"
+            class="object-cover object-center mb-4"
+            src="./images/member3.png" />
+          <div class="w-full">
+            <h2 class="text-3xl font-bold">Rokib Hossain</h2>
+            <h3 class="mb-3 text-base font-medium">Fruits Expert</h3>
+            <i class="fab fa-facebook text-tomato text-3xl mr-2"></i>
+            <i class="fab fa-twitter text-tomato text-3xl mr-2"></i>
+            <i class="fab fa-linkedin text-tomato text-3xl"></i>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+
+<!-- team section start -->
 
 
   </section>
