--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
       <div class="flex justify-center items-center">
         <img class="w-auto" src="./images/logo.png" alt="" />
-        <p class="pl-2 text-xl font-extrabold xl:text-3xl lg:text-white">
+        <p class="pl-2 text-xl font-extrabold xl:text-4xl lg:text-white">
           Fruit Burst
         </p>
       </div>
@@ -228,7 +228,7 @@
       <div
         class="flex flex-col lg:flex-row justify-between items-center  lg:mt-40 mx-10 lg:mx-16 mt-10 p-5 gap-6 text-black">
         <div class="text-center lg:text-left">
-          <h3 class="ttext-3xl lg:lg:text-6xl font-extrabold pb-5">Deal of the day</h3>
+          <h3 class="ttext-4xl lg:lg:text-6xl font-extrabold pb-5">Deal of the day</h3>
           <p class="text-xs lg:text-base font-normal text-center lg:text-left">
             Contrary to popular belief, is not simply random text. <br />
             It has roots in a piece of classical Latin literature from 45 BC,
@@ -295,7 +295,7 @@
             <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
-            <h2 class="card-title ttext-3xl font-extrabold">12.90$ - 18.85$</h2>
+            <h2 class="card-title ttext-4xl font-extrabold">12.90$ - 18.85$</h2>
             <div class="divider"></div>
             <p class="text-xs">Apples</p>
             <div class="rating rating-md rating-half">
@@ -321,7 +321,7 @@
                     <img src="./images/fruit6.png" alt="Shoes" class="rounded-xl" />
                   </figure>
                   <div class="card-body items-center text-center">
-                    <h2 class="card-title ttext-3xl font-extrabold">Apples</h2>
+                    <h2 class="card-title ttext-4xl font-extrabold">Apples</h2>
                     <p class="text-xs">
                       Professional employees are there for you to pick the most
                       amazing and fresh fruits.
@@ -360,7 +360,7 @@
             <img src="./images/fruit7.png" alt="Shoes" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
-            <h2 class="card-title ttext-3xl font-extrabold">12.90$ - 18.85$</h2>
+            <h2 class="card-title ttext-4xl font-extrabold">12.90$ - 18.85$</h2>
             <div class="divider"></div>
             <p class="text-xs">Orange</p>
             <div class="rating rating-md rating-half">
@@ -386,7 +386,7 @@
                     <img src="./images/fruit7.png" alt="Shoes" class="rounded-xl" />
                   </figure>
                   <div class="card-body items-center text-center">
-                    <h2 class="card-title ttext-3xl font-extrabold">Orange</h2>
+                    <h2 class="card-title ttext-4xl font-extrabold">Orange</h2>
                     <p class="text-xs">
                       Professional employees are there for you to pick the most
                       amazing and fresh fruits.
@@ -427,7 +427,7 @@
             <img src="./images/fruit8.png" alt="Shoes" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
-            <h2 class="card-title ttext-3xl font-extrabold">12.90$ - 18.85$</h2>
+            <h2 class="card-title ttext-4xl font-extrabold">12.90$ - 18.85$</h2>
             <div class="divider"></div>
             <p class="text-xs">Dragon Fruit</p>
             <div class="rating rating-md rating-half">
@@ -453,7 +453,7 @@
                     <img src="./images/fruit8.png" alt="Shoes" class="rounded-xl" />
                   </figure>
                   <div class="card-body items-center text-center">
-                    <h2 class="card-title ttext-3xl font-extrabold">Dragon Fruits</h2>
+                    <h2 class="card-title ttext-4xl font-extrabold">Dragon Fruits</h2>
                     <p class="text-xs">
                       Professional employees are there for you to pick the most
                       amazing and fresh fruits.
@@ -491,7 +491,7 @@
             <img src="./images/fruit9.png" alt="Shoes" class="rounded-xl" />
           </figure>
           <div class="card-body items-center text-center">
-            <h2 class="card-title ttext-3xl font-extrabold">12.90$ - 18.85$</h2>
+            <h2 class="card-title ttext-4xl font-extrabold">12.90$ - 18.85$</h2>
             <div class="divider"></div>
             <p class="text-xs">Banana</p>
             <div class="rating rating-md rating-half">
@@ -517,7 +517,7 @@
                     <img src="./images/fruit9.png" alt="Shoes" class="rounded-xl" />
                   </figure>
                   <div class="card-body items-center text-center">
-                    <h2 class="card-title ttext-3xl font-extrabold">Bananas</h2>
+                    <h2 class="card-title ttext-4xl font-extrabold">Bananas</h2>
                     <p class="text-xs">
                       Professional employees are there for you to pick the most
                       amazing and fresh fruits.
@@ -574,44 +574,44 @@
               <div class="h-full flex flex-col items-center text-center">
                 <img alt="team" class="object-cover object-center mb-4" src="./images/member1.png" />
                 <div class="w-full">
-                  <h2 class="text-3xl font-bold">Awlad Hossain</h2>
+                  <h2 class="text-4xl font-bold">Awlad Hossain</h2>
                   <h3 class="mb-3 text-base font-medium">Fruits Expert</h3>
-                  <i class="fab fa-facebook text-tomato text-3xl mr-2"></i>
-                  <i class="fab fa-twitter text-tomato text-3xl mr-2"></i>
-                  <i class="fab fa-linkedin text-tomato text-3xl"></i>
+                  <i class="fab fa-facebook text-tomato text-4xl mr-2"></i>
+                  <i class="fab fa-twitter text-tomato text-4xl mr-2"></i>
+                  <i class="fab fa-linkedin text-tomato text-4xl"></i>
                 </div>
               </div>
 
               <div class="h-full flex flex-col items-center text-center">
                 <img alt="team" class="object-cover object-center mb-4" src="./images/member4.png" />
                 <div class="w-full">
-                  <h2 class="text-3xl font-bold">Chaity</h2>
+                  <h2 class="text-4xl font-bold">Chaity</h2>
                   <h3 class="mb-3 text-base font-medium">Fruits Expert</h3>
-                  <i class="fab fa-facebook text-tomato text-3xl mr-2"></i>
-                  <i class="fab fa-twitter text-tomato text-3xl mr-2"></i>
-                  <i class="fab fa-linkedin text-tomato text-3xl"></i>
+                  <i class="fab fa-facebook text-tomato text-4xl mr-2"></i>
+                  <i class="fab fa-twitter text-tomato text-4xl mr-2"></i>
+                  <i class="fab fa-linkedin text-tomato text-4xl"></i>
                 </div>
               </div>
 
               <div class="h-full flex flex-col items-center text-center">
                 <img alt="team" class="object-cover object-center mb-4" src="./images/member2.png" />
                 <div class="w-full">
-                  <h2 class="text-3xl font-bold">Safia Chowdhury</h2>
+                  <h2 class="text-4xl font-bold">Safia Chowdhury</h2>
                   <h3 class="mb-3 text-base font-medium">Fruits Expert</h3>
-                  <i class="fab fa-facebook text-tomato text-3xl mr-2"></i>
-                  <i class="fab fa-twitter text-tomato text-3xl mr-2"></i>
-                  <i class="fab fa-linkedin text-tomato text-3xl mr-2"></i>
+                  <i class="fab fa-facebook text-tomato text-4xl mr-2"></i>
+                  <i class="fab fa-twitter text-tomato text-4xl mr-2"></i>
+                  <i class="fab fa-linkedin text-tomato text-4xl mr-2"></i>
                 </div>
               </div>
 
               <div class="h-full flex flex-col items-center text-center">
                 <img alt="team" class="object-cover object-center mb-4" src="./images/member3.png" />
                 <div class="w-full">
-                  <h2 class="text-3xl font-bold">Rokib Hossain</h2>
+                  <h2 class="text-4xl font-bold">Rokib Hossain</h2>
                   <h3 class="mb-3 text-base font-medium">Fruits Expert</h3>
-                  <i class="fab fa-facebook text-tomato text-3xl mr-2"></i>
-                  <i class="fab fa-twitter text-tomato text-3xl mr-2"></i>
-                  <i class="fab fa-linkedin text-tomato text-3xl"></i>
+                  <i class="fab fa-facebook text-tomato text-4xl mr-2"></i>
+                  <i class="fab fa-twitter text-tomato text-4xl mr-2"></i>
+                  <i class="fab fa-linkedin text-tomato text-4xl"></i>
                 </div>
               </div>
             </div>
@@ -628,7 +628,7 @@
       <!-- choose section start -->
 
 
-      <div class="flex flex-col justify-center items-center gap-5 text-center  text-black mx-3 lg:mx-16 my-12">
+      <div class="flex flex-col justify-center items-center gap-5 text-center  text-black mx-3 lg:mx-16 my-12 mt-30">
         <h3 class="text-5xl font-extrabold">Why Choose Us</h3>
         <p class="text-base font-medium">
           Contrary to popular belief, is not simply random text. It has roots in a
@@ -718,6 +718,47 @@
 
 
   <footer>
+
+    <section
+      class="footer footer-center p-10 bg-black text-base-content rounded mt-20 py-40">
+      <div class="flex justify-center items-center">
+        <img class="w-auto" src="./images/logo.png" alt="" />
+        <p class="pl-1 text-2xl font-bold lg:text-4xl text-white">
+          Fruit Burst
+        </p>
+      </div>
+
+      <div class="flex flex-wrap gap-14 justify-evenly items-center">
+        <a class="link link-hover text-base lg:text-lg font-normal text-white"
+          >Home</a
+        >
+        <a class="link link-hover text-base lg:text-lg font-normal text-white"
+          >About us</a
+        >
+        <a class="link link-hover text-base lg:text-lg font-normal text-white"
+          >Shop</a
+        >
+        <a class="link link-hover text-base lg:text-lg font-normal text-white"
+          >All Fruits</a
+        >
+        <a class="link link-hover text-base lg:text-lg font-normal text-white"
+          >Support</a
+        >
+        <a class="link link-hover text-base lg:text-lg font-normal text-white"
+          >My Account</a
+        >
+      </div>
+      <div>
+        <div class="flex gap-14 justify-center items-center text-4xl">
+          <i class="fab fa-facebook text-sky-700 text-xl lg:text-4xl"></i>
+          <i class="fab fa-twitter text-white text-xl lg:text-4xl"></i>
+          <i class="fab fa-youtube text-red-700 text-xl lg:text-4xl"></i>
+          <i class="fab fa-instagram text-white text-xl lg:text-4xl"></i>
+          <i class="fab fa-linkedin text-white text-xl lg:text-4xl"></i>
+          <i class="fab fa-apple text-white text-xl lg:text-4xl"></i>
+        </div>
+      </div>
+    </section>
 
   </footer>
 
