--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
   <footer>
 
     <section
-      class="footer footer-center p-10 bg-black text-base-content rounded mt-20 py-40">
+      class="footer footer-center lg:p-10 bg-black text-base-content rounded lg:mt-20 lg:py-40">
       <div class="flex justify-center items-center">
         <img class="w-auto" src="./images/logo.png" alt="" />
         <p class="pl-1 text-2xl font-bold lg:text-4xl text-white">
