--- a/index.html
+++ b/index.html
@@ -720,7 +720,7 @@
   <footer>
 
     <section
-      class="footer footer-center lg:p-10 bg-black text-base-content rounded lg:mt-20 lg:py-40">
+      class="footer footer-center lg:p-10 bg-black text-base-content rounded lg:mt-20 lg:py-40 py-10">
       <div class="flex justify-center items-center">
         <img class="w-auto" src="./images/logo.png" alt="" />
         <p class="pl-1 text-2xl font-bold lg:text-4xl text-white">
@@ -728,7 +728,7 @@
         </p>
       </div>
 
-      <div class="flex flex-wrap gap-14 justify-evenly items-center">
+      <div class="flex flex-wrap lg:gap-14 gap-4 justify-evenly items-center">
         <a class="link link-hover text-base lg:text-lg font-normal text-white"
           >Home</a
         >
@@ -749,7 +749,7 @@
         >
       </div>
       <div>
-        <div class="flex gap-14 justify-center items-center text-4xl">
+        <div class="flex lg:gap-14 gap-5 justify-center items-center text-4xl">
           <i class="fab fa-facebook text-sky-700 text-xl lg:text-4xl"></i>
           <i class="fab fa-twitter text-white text-xl lg:text-4xl"></i>
           <i class="fab fa-youtube text-red-700 text-xl lg:text-4xl"></i>
